[gd_scene load_steps=7 format=3 uid="uid://cbjn5vbxbykpb"]

[ext_resource type="FontFile" uid="uid://bwd442elqtlrd" path="res://fonts/Hacked Cyr.ttf" id="1_nrv70"]
[ext_resource type="Script" path="res://UI/SettingsUI.gd" id="2_7mxay"]
[ext_resource type="Theme" uid="uid://cbjsm4l5i5dtq" path="res://Default.tres" id="3_ieydx"]

[sub_resource type="Theme" id="Theme_7lstv"]
default_font = ExtResource("1_nrv70")
default_font_size = 36

[sub_resource type="InputEventKey" id="InputEventKey_5tkmw"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_vovmq"]
events = [SubResource("InputEventKey_5tkmw")]

[node name="SettingsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7lstv")
script = ExtResource("2_7mxay")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.5
offset_top = -222.5
offset_right = 473.5
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ieydx")

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ieydx")
tab_alignment = 1
current_tab = 2

[node name="Gameplay" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Gameplay"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "WORK IN PROGRESS"

[node name="Controls" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
text = "WORK IN PROGRESS"

[node name="Audio" type="VBoxContainer" parent="Panel/TabContainer"]
layout_mode = 2

[node name="Main" type="HBoxContainer" parent="Panel/TabContainer/Audio"]
layout_mode = 2

[node name="MainLabel" type="Label" parent="Panel/TabContainer/Audio/Main"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Master volume"

[node name="MainSlider" type="HSlider" parent="Panel/TabContainer/Audio/Main"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_ieydx")
max_value = 1.0
step = 0.001
value = 0.3

[node name="Music" type="HBoxContainer" parent="Panel/TabContainer/Audio"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Panel/TabContainer/Audio/Music"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Panel/TabContainer/Audio/Music"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 0.5

[node name="Effects" type="HBoxContainer" parent="Panel/TabContainer/Audio"]
layout_mode = 2

[node name="EffectLabel" type="Label" parent="Panel/TabContainer/Audio/Effects"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="Panel/TabContainer/Audio/Effects"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 0.5

[node name="Exit" type="Button" parent="Panel"]
z_index = 3
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
offset_left = 0.5
offset_top = 0.5
offset_right = 32.5
offset_bottom = 52.5
theme = ExtResource("3_ieydx")
shortcut = SubResource("Shortcut_vovmq")
text = "X"

[connection signal="value_changed" from="Panel/TabContainer/Audio/Main/MainSlider" to="." method="_on_main_slider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Audio/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Audio/Effects/EffectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
